# Fun-APIs-CLI

./: .gitignore  MANIFEST.in  README.md  fun_apis.py  main.py  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  test.py
API_handling/: __init__.py  animals.py  config_manager.py  constants.py  facts.py  quotes.py
Interactive_mode/: __init__.py  constants.py  interactive.py  interactive_functions.py
apis_handling/: __init__.py  animals.py  celebrities.py  config_manager.py  constants.py  facts.py  quotes.py  superhero.py  superheroes.py  utils.py
apis_handling/apis_configuring/: __init__.py  config_manager.py
apis_handling/constants/: __init__.py  general_constants.py  heroes_ids_names.json  typed_dicts.py
configuration/: config_manager.py
constants/: __init__.py  cli_constants.py  general_constants.py  interactive_mode_constants.py
fun_apis/: __init__.py  cli.py  main.py
fun_apis/CLI/: __init__.py
fun_apis/api_clients/: __init__.py  animal_client.py  celebrity_client.py  fact_client.py  quote_client.py  superhero_client.py
fun_apis/apis_handling/: __init__.py  animals.py  celebrities.py  facts.py  quotes.py  superheroes.py
fun_apis/cli/: __init__.py  interactive.py
fun_apis/config/: config_manager.py
fun_apis/configuration/: __init__.py  config_manager.py
fun_apis/constants/: __init__.py  general.py  general_constants.py  heroes_ids_names.json  interactive_mode_constants.py  typed_dicts.py
fun_apis/helper_functions/: main.py
fun_apis/interactive_cli/: interactive.py
fun_apis/utils/: __init__.py  formatting.py  helper_functions.py  https_interaction.py  other.py  validation.py
interactive_cli/: cli_constants.py  constants.py  interactive.py
utils/: helper_functions.py
