[metadata]
name = Fun-APIs-CLI
version = 0.1.3
author = Taha Yasser Adnan
author_email = taha.y.adnan@gmail.com
description = A fun Python CLI tool for fetching random facts, animal information, quotes, and much more from various APIs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tahadnan/Fun-APIs-CLI
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = 
    = .
python_requires = >=3.6
install_requires = 
    prompt_toolkit
    pycountry
    requests
    rich
    plotext

[options.packages.find]
where = .
include = fun_apis*
include_package_data = True

[options.package_data]
fun_apis = constants/*.json

[options.entry_points]
console_scripts = 
    fun-apis-cli = fun_apis:main_entery
